Agentforce/force-app/main/default/objects/Competitor_Services__c/Competitor_Services__c.object-meta.xml
<CustomObject>
    <description>AD-67 - Create Competitor Service Object</description>
    <label>Competitor Service</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>