Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-67 - Stores the Account that is the Competitor</description>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitor_Services</relationshipName>
    <type>Lookup</type>
</CustomField>