Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/CompetitorCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>CompetitorCaseSafeID__c</fullName>
    <description>Competitor CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompetitorCaseSafeID</label>
    <type>Text</type>
</CustomField>