Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Competitor_Services</relationshipName>
    <type>Lookup</type>
</CustomField>