Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Competitor_Services</relationshipName>
    <type>Lookup</type>
</CustomField>