Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/Estimated_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Value__c</fullName>
    <description>AD-176 - currency field to capture the estimated annual value of the competitor service</description>
    <label>Estimated Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>