Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/FOI__c.field-meta.xml
<CustomField>
    <fullName>FOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-67 - Stores the FOI that this Competitor Services was created from</description>
    <label>FOI</label>
    <referenceTo>FOI__c</referenceTo>
    <relationshipName>Competitor_Services</relationshipName>
    <type>Lookup</type>
</CustomField>