Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>