Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity where we aim to dislodge the Competitor.</inlineHelpText>
    <label>Target Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitor Services (Opportunity)</relationshipLabel>
    <relationshipName>Competitor_Services</relationshipName>
    <type>Lookup</type>
</CustomField>