Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity that resulted in the creation of this Competitor Service record.</inlineHelpText>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Competitor_Services_Source</relationshipName>
    <type>Lookup</type>
</CustomField>