Agentforce/force-app/main/default/objects/Competitor_Services__c/fields/System_Renewal_Date_Passed__c.field-meta.xml
<CustomField>
    <fullName>System_Renewal_Date_Passed__c</fullName>
    <description>True if the renewal date of the Competitor Service has passed</description>
    <formula>Renewal_Date__c &lt; TODAY()</formula>
    <label>Renewal Date Passed</label>
    <type>Checkbox</type>
</CustomField>